made by no longer shows on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 * {
-    font-family: 'Work Sans', sans-serif;
+	font-family: 'Work Sans', sans-serif;
 	margin: 0;
-    --shape-radius: 16px;
+	--shape-radius: 16px;
 }
 
 html,
@@ -18,41 +18,46 @@ body {
 }
 
 h6 {
-    font-size: 20px;
+	font-size: 20px;
 }
 
 .root {
 	background-color: white;
-    border-radius: var(--shape-radius);
-    box-shadow: 0px 2px 10px -6px black;
-    display: grid;
-    gap: 16px;
-    padding: 32px;
+	border-radius: var(--shape-radius);
+	box-shadow: 0px 2px 10px -6px black;
+	display: grid;
+	gap: 16px;
+	padding: 32px;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .button {
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: none;
-    height: 32px;
-    border-radius: var(--shape-radius);
-    cursor: pointer;
-    background-color: aquamarine;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: none;
+	height: 32px;
+	border-radius: var(--shape-radius);
+	cursor: pointer;
+	background-color: aquamarine;
 }
 
 .button:hover {
-    background-color: aquamarine;
+	background-color: aquamarine;
 }
 
 .made-by {
-    position: absolute;
-    bottom: 8px;
-    right: 8px;
+	position: absolute;
+	bottom: 8px;
+	right: 8px;
+}
+@media (max-width: 980px) {
+	.made-by {
+        display: none;
+	}
 }
